--- a/tutorial_groq.ipynb
+++ b/tutorial_groq.ipynb
@@ -20,7 +20,7 @@
     "llm=ChatGroq(\n",
     "    temperature=0,\n",
     "    model_name=\"mixtral-8x7b-32768\",\n",
-    "    groq_api_key='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'\n",
+    "    groq_api_key='<api_key>'\n",
     ")\n",
     "response=llm.invoke(\"who is the current pm of india\")\n",
     "print(response.content)"
